--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -29,8 +29,8 @@ nmap tL :tabm $<CR>
 
 " Undo and redo
 " https://youtrack.jetbrains.com/issue/VIM-3881/Undo-u-in-IdeaVim-is-broken-on-remote-development-environments
-nmap u <Action>($Undo)
-nmap U <Action>($Redo)
+" nmap u <Action>($Undo)
+" nmap U <Action>($Redo)
 
 " Input method
 " IdeaVimExtension
