feat: Add more indentation in the Visual Studio code explorer file tree structure

--- a/cursor/settings.json
+++ b/cursor/settings.json
@@ -603,5 +603,6 @@
   "notebook.multiCursor.enabled": true,
   "markdown.copyFiles.destination": {
     "**/*": "${documentDirName}/"
-  }
+  },
+  "workbench.tree.indent": 20
 }
