feat: Update kitty workspace conf

--- a/kitty/workspace.conf
+++ b/kitty/workspace.conf
@@ -1,5 +1,5 @@
 new_tab Note
-cd /Users/jing/Code/GitHub/Note
+cd /Users/jing/Library/Mobile\ Documents/iCloud~md~obsidian/Documents/Note
 launch zsh
 
 new_tab Tmp
